obln.org (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1168,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 13.66,
  "homepage_snapshot_redirected_domain": "obln.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040902194401id_/http://www.obln.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040902194401id_/http%3A//obln.org",
  "interval": "2004_B",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "obln.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204210658id_/http%3A//www.obln.org/privacy.htm",
  "policy_title": "Privacy Policy - OBLN",
  "policy_url": "obln.org/privacy.htm",
  "sha1": "399fda02d7f6de629d2011e813708a93194d5776",
  "simhash": 18270325106704310617,
  "simhash_updated": false,
  "site_hostname": "obln.org",
  "site_url": "http://obln.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204210658",
  "word_count": 190,
  "year": 2004
}

--- a/o/ob/obl/obln.org.html
+++ b/o/ob/obl/obln.org.html
@@ -1,76 +1,206 @@
-<!--The following is the downloaded HTML source of the obln.org privacy policy that was archived on 2004-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040612142214id_/http%3A//www.obln.org/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the obln.org privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204210658id_/http%3A//www.obln.org/privacy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/2000/REC xhtml1-20000126/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-	<title>Oregon Business Leadership Network</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="description" content="The Oregon Business Leadership Network provides Oregon businesses with networking opportunities, education and information to effectively increase understanding and awareness of disability issues in the workplace.">
-<meta name="keywords" content="oregon, business, disability, disabilities, person with disabilities, workplace, accommodation, inclusion, employment, employer, employee, training, americans with disabilities act, ada, compliance, right to work issues, networking, hiring, vocational rehabilitation, jobs, work">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="includes/stylesheet.css" type="text/css" media="all">
-<script language="JavaScript" src="includes/javascript.js" type="text/javascript"></script>
+<html><head>
+<meta http-equiv="Content-Language" content="en-us">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>Privacy Policy - OBLN</title>
+<meta name="description" content="Privacy Policy of the Oregon Business Leadership Network.">
+<meta name="keywords" content="Oregon Business Leadership Network, disability, disabilities, employment, work, companies, employers">
+<meta name="Microsoft Border" content="tlb, default">
 </head>
-<body>
 
-<a name="top"></a>
+<body style="font-family: Arial"><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td bgcolor="#9999FF">
+<table border="1" cellpadding="0" style="border-collapse: collapse; border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-style: solid; border-bottom-width: 0; padding-left: 6px" width="710" bgcolor="#9999FF">
+	<tbody><tr>
+		<td style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-style: solid; border-bottom-width: 1px" bordercolor="#9999FF" valign="top">
+		<p align="left"><b><font face="Arial" color="#9999FF"><a name="top">t</a></font><font color="#000066" face="Arial"><br>
+		<map name="FPMap0_I1">
+		<area alt="Oregon Business Leaderhip Network: click here to go to home page" coords="5, 7, 446, 30" shape="rect" href="index.htm">
+		</map>
+		<img border="0" src="_borders/name4.jpg" width="454" height="37" alt="Oregon Business Leadership Network" usemap="#FPMap0_I1"><br>
+		Employers committed to the inclusion of qualified <br>
+		people with disabilities in the competitive workplace</font></b></p></td>
+		<td bordercolor="#9999FF">
+		<img border="0" src="_borders/head04.07.18.jpg" width="244" height="107" alt="Picture of four individuals."></td>
+	</tr>
+	<tr>
+		<td colspan="2" style="border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-style: solid; border-bottom-width: 1px; padding-left: 0" bordercolor="#FF9933">
+		<font size="1">
+		<img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"><img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"><img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"><img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"></font></td>
+	</tr>
+</tbody></table>
 
-	<div id="head">
-		<a href="#content" title="Jump to Page Content (j)" class="invisible" accesskey="j">Jump to Page Content</a>
-		<a href="#navigation" title="Jump to Page Navigation (n)" class="invisible" accesskey="n">Jump to Page Navigation</a>
-		<p><span class="bigHead">Oregon Business Leadership Network</span><br>
-		<span class="smallHead">Supporting the hiring, recruiting and retaining of qualified people with disabilities</span><br>
-		<span class="tinyHead">contact Lucy Baker, Operations Manager &nbsp;|&nbsp; (503) 281-1424 &nbsp;|&nbsp; <a href="mailto:lucy.baker@obln.org">lucy.baker@obln.org</a></span></p>
-	</div>
-	<a name="navigation"></a>
-	
-	<div id="container">
-	
-		<div id="nav">
-			<p><a href="index.php" title="return home"><img src="images/the_shape_logo.gif" alt="the shape of your workforce" width="154" height="62"></a></p>
-			<a href="about.php?section=mission" title="about the obln" class="navLink">about the obln</a><br>
-			<img src="images/nav_dots.gif" alt="" width="31" height="4"><br>
-			<a href="affiliates.php?section=members" title="current affiliates" class="navLink">current affiliates</a><br>
-			<img src="images/nav_dots.gif" alt="" width="31" height="4"><br>
-			<a href="join.php?section=howTo" title="become an affiliate" class="navLink">become an affiliate</a><br>
-			<img src="images/nav_dots.gif" alt="" width="31" height="4"><br>
-			<a href="resources.php?section=resources" title="employer resources" class="navLink">employer resources</a><br>
-			<img src="images/nav_dots.gif" alt="" width="31" height="4"><br>
-			<a href="calendar.php?year=2004" title="event calendar" class="navLink">event calendar</a><br>
-			<img src="images/nav_dots.gif" alt="" width="31" height="4"><br>
-			<a href="flexAbility.php?section=about" title="flexability conference 2003" class="navLink">flexability</a>
-			<p><img src="images/squares_circles_bar.gif" alt="" width="167" height="16"></p>
-			
-			
-			<form action="newsletter.php" method="post">
-			<input type="hidden" name="sub_unsub" value="sub">
-			<p class="small"><label for="email">Enter your email address to <br>
-			receive news and updates:<br></label>
-			<img src="images/transparent.gif" alt="" width="1" height="4"><br>		
-			<input class="emailBox" type="text" name="email" id="email" value="email address" onfocus="clearIt(this);"> &nbsp; 
-			<input class="emailButton" type="submit" name="submit" value="GO"><br>
-			<img src="images/transparent.gif" alt="" width="1" height="4"><br>
-			<a href="options.php" title="more options">more options</a> &nbsp; | &nbsp; <a href="privacy.php" title="privacy policy">privacy policy</a><br>
-			<img src="images/nav_dots.gif" alt="" width="31" height="4" vspace="5"><br>
-			<span class="small">this site is  <a href="http://bobby.watchfire.com/" title="Bobby's Home Page" target="_blank">bobby approved</a></span></p>
-			</form>
-			<a name="content"></a>
-		</div>
-		
-		<div id="main">
-			<p class="grey"><span class="subHead">privacy policy</span></p>
+</td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td valign="top" width="1%" bgcolor="#9999FF">
+<div align="center">
+	<table border="0" style="border-collapse: collapse; font-family: Arial" width="163" bgcolor="#9999FF" cellpadding="2" bordercolor="#9999FF">
+		<tbody><tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">&nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066"><a href="index.htm">
+			<font color="#FFFFFF"><span style="text-decoration: none">home</span></font></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">&nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066">
+			<span style="text-decoration: none"><a href="benefits.htm">
+			<font color="#000066"><span style="text-decoration: none">affiliate 
+			benefits</span></font></a></span></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066"><a href="affiliate.htm">
+			<font color="#000066"><span style="text-decoration: none">current 
+			affiliates</span></font></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">
+			<a href="A%20Register.htm">
+			<img border="0" src="_borders/join.jpg" width="114" height="48" alt="Picture and Link: Join Now!"></a></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">&nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066"><a href="newsletter.htm">
+			<font color="#000066"><span style="text-decoration: none">FREE 
+			eNewsletter</span></font></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">&nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066">
+			<a href="resources/resources.htm"><font color="#000066">
+			<span style="text-decoration: none">employer resources</span></font></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">
+			<a href="flex.htm"><font color="#000066"><b>
+			<span style="text-decoration: none">f</span></b></font></a><b><font face="Arial" color="#000066"><a href="flex.htm"><span style="text-decoration: none"><font color="#000066">lex</font><font color="#000080" size="5">A</font><font color="#000066">bility 
+			Manual</font></span></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066">
+			<span style="text-decoration: none"><a href="Calendar/04.htm">
+			<font color="#000066"><span style="text-decoration: none">event 
+			calendar</span></font></a></span></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">&nbsp;</td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066"><a href="about.htm">
+			<font color="#FFFFFF"><span style="text-decoration: none">about us</span></font></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">
+			<font face="Arial" color="#000066"><b><a href="contact.htm">
+			<font color="#FFFFFF"><span style="text-decoration: none">contact us</span></font></a></b></font></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px"><b>
+			<font face="Arial" color="#000066"><a href="privacy.htm">
+			<font color="#FFFFFF"><span style="text-decoration: none">privacy 
+			policy</span></font></a></font></b></td>
+		</tr>
+		<tr>
+			<td align="left" style="margin-top: 2; padding-left: 4px">
+			<font size="2">To learn more about the folks pictured on the top of 
+			the page, </font><a href="which.htm"><font size="2">Click Here</font></a></td>
+		</tr>
+	</tbody></table>
+</div>
+<p align="left">&nbsp;</p>
+<p align="left">&nbsp;</p>
 
-			<p>Thank you for visiting the OBLN web site. This notice addresses privacy concerns about the information collected on this site.</p>
-			<p>As a general rule, the Oregon Business Leadership Network does not collect personally-identifying information about you when you visit our site, unless you choose to provide such information to us. The information we receive depends upon what you do when visiting our site.</p>
-			<p>If you respond to an on-line request for personal information, the information requested by OBLN will be used to respond to your inquiry or to provide you with the service associated with the request. You also may decide to send us personally-identifying information, for example your mailing address, in an electronic mail message requesting that information be mailed to you. Information collected in this manner is used solely for responding to requests for information or records.</p>
-			<p>Please be aware that if you link to other sites outside OBLN, you are no longer on our site and are subject to the privacy policy of the new site.</p>
-						<img src="images/three_dots.gif" alt="" width="23" height="5">
-			<p><a href="#top">return to top</a></p>
-		</div>
-		
-	</div>	
-	
+</td><td valign="top" width="24"></td><!--msnavigation--><td valign="top">
 
+<table border="0" cellpadding="0" style="border-collapse: collapse" width="520">
+	<tbody><tr>
+		<td width="40%"><a name="top"></a></td>
+		<td width="60%" bgcolor="#9999FF" style="padding-right: 6px">
+		<p align="right"><font face="Times New Roman" size="6" color="#000066">
+		Privacy</font></p></td>
+	</tr>
+</tbody></table>
+<table border="0" cellpadding="0" style="border-collapse: collapse" width="520">
+	<tbody><tr>
+		<td colspan="2">
+		<p class="MsoPlainText"><br>
+		<span lang="EN"><font size="2">Thank you for visiting the OBLN web site. 
+		This notice addresses privacy concerns about the information collected 
+		on this site.</font></span></p>
+		<p><span lang="EN"><font size="2">As a general rule, the Oregon Business 
+		Leadership Network does not collect personally-identifying information 
+		about you when you visit our site, unless you choose to provide such 
+		information to us. The information we receive depends upon what you do 
+		when visiting our site.</font></span></p>
+		<p><span lang="EN"><font size="2">If you respond to an on-line request 
+		for personal information, the information requested by OBLN will be used 
+		to respond to your inquiry or to provide you with the service associated 
+		with the request. You also may decide to send us personally-identifying 
+		information, for example your mailing address, in an electronic mail 
+		message requesting that information be mailed to you. Information 
+		collected in this manner is used solely for responding to requests for 
+		information or records.</font></span></p>
+		<p><span lang="EN"><font size="2">Please be aware that if you link to 
+		other sites outside OBLN, you are no longer on our site and are subject 
+		to the privacy policy of the new site</font></span></p>
+		<p class="MsoNormal"><span lang="EN" style="color: black">
+		<font size="2">Become affiliated with the Oregon Business Leadership 
+		Network today--and start enhancing your workforce tomorrow!</font></span></p>
+		<a href="#Top"><font size="2">Return to Top</font></a></td>
+	</tr>
+	<tr>
+		<td align="right">&nbsp;</td>
+		<td width="75%">&nbsp;</td>
+	</tr>
+	</tbody></table>
+<p class="MsoPlainText"></p>
+
+<!--msnavigation--></td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td>
+
+<table border="1" cellpadding="0" cellspacing="0" style="border-collapse: collapse" width="100%">
+	<tbody><tr>
+		<td bgcolor="#9999FF" valign="top">
+		<table border="0" cellpadding="0" style="border-collapse: collapse" width="718" bordercolor="#FF9933">
+			<tbody><tr>
+				<td style="border-left-width: 1px; border-right-width: 1px; border-top-style: solid; border-top-width: 1px; border-bottom-width: 1px">
+				<font size="1">
+				<img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"><img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"><img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"><img border="0" src="_borders/border.jpg" width="178" height="18" alt="Border Graphic"></font><p align="center">
+				<font color="#000066" face="Arial"><i>©</i> Oregon Business 
+				Leadership Network, 2004<br>
+				</font><em><i>
+				<font face="Comic Sans MS" size="2" color="#000066">
+				<span style="font-family: Arial; font-weight: 700">
+				Recruitment/Hiring/Retention/Return to Work/Accommodation/Cost 
+				Effective Strategies</span></font></i></em><font face="Times New Roman"><b><br>
+				</b></font>
+				<img border="0" src="images/logos/CST.gif" width="56" height="19" alt="image: circle, square, triangle"><font face="Arial" size="2"><br>
+				Contact Lucy Baker, Operations Manager<br>
+				Tel: (503) 281-1424 Email: <a href="mailto:lucy.baker@obln.org">
+				lucy.baker@obln.org</a> <br>
+				</font><font color="#000066" face="Arial">
+				<a href="http://www.obln.org"><font size="2">www.obln.org</font></a><font size="2">
+				</font><br>
+&nbsp;</font></p></td>
+			</tr>
+		</tbody></table>
+		</td>
+	</tr>
+</tbody></table>
+
+</td></tr><!--msnavigation--></tbody></table>
 
 
 </body></html>
