--- a/0/08/080/0800-horoscope.com.html
+++ b/0/08/080/0800-horoscope.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 0800-horoscope.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602202556id_/http%3A//www.0800-horoscope.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 0800-horoscope.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204211246id_/http%3A//www.0800-horoscope.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>0800-horoscope - Privacy Statement</title>
@@ -9,9 +9,10 @@
 
 <style type="text/css">
 a:hover { color: red }
+body,p { font-family: sans-serif ; font-size: 10pt; }
 </style>
 
-<script src="/bm.js" type="text/javascript" language="javascript"></script>
+
 
 
 </head>
@@ -23,7 +24,7 @@ a:hover { color: red }
 <table border="0" width="600" cellpadding="5" cellspacing="0">
 	<tbody><tr>
 		<td align="LEFT"><i><b><font size="2" face="Zurich BT,Verdana,Helvetica">0800-horoscope</font></b></i></td>
-		<td align="RIGHT" valign="TOP"><i><b><font size="4" face="Zurich BT,Verdana,Helvetica">free astrology &amp; horoscopes</font></b></i><img src="http://www.0800-horoscope.com/count.nclk?5230763" alt="" width="1" height="1"></td>
+		<td align="RIGHT" valign="TOP"><i><b><font size="4" face="Zurich BT,Verdana,Helvetica">free astrology &amp; horoscopes</font></b></i><img src="http://www.0800-horoscope.com/count.nclk?3424868" alt="" width="1" height="1"></td>
 	</tr>
 </tbody></table>
 <table border="0" cellpadding="4" width="610">
@@ -38,11 +39,12 @@ a:hover { color: red }
 <tr><td>&nbsp; - <a href="/daily.html">Daily</a></td></tr>
 <tr><td>&nbsp; - <a href="/">Weekly</a></td></tr>
 <tr><td>&nbsp; - <a href="/monthly.html">Monthly</a></td></tr>
-<tr><td>&nbsp; - <a href="/year2004.html">Year 2004</a><img src="http://images.easyscopes.com/images/new.gif" alt="NEW!" border="0" width="28" height="11"></td></tr>
+<tr><td>&nbsp; - <a href="/year2004.html">Year 2004</a></td></tr>
 <tr><td>&nbsp; - <a href="/previsions.html">14 Day Outlook</a></td></tr>
 <tr><td>&nbsp; - <a href="/partnerscope.html">PartnerScope</a></td></tr>
 <tr><td>&nbsp; - <a href="/weeklycombi.html">Sun*Moon*Asc</a></td></tr>
 <tr><td></td></tr>
+<tr><td><font size="2"><a href="/election2004.html">Election 2004</a><img src="http://images.easyscopes.com/images/new.gif" alt="NEW!" border="0" width="28" height="11"></font></td></tr>
 <tr><td><font size="2"><a href="/emailscopes.html">E-Mail Scopes</a></font></td></tr>
 <tr><td>&nbsp; - <a href="/dailyscopes.html">Daily</a></td></tr>
 <tr><td>&nbsp; - <a href="/emailscopes.html">Weekly</a></td></tr>
@@ -96,12 +98,13 @@ a:hover { color: red }
 		<td><font size="1">&nbsp;</font></td>
 		<td align="CENTER">
 			<p><font size="2">Please visit our sponsors:</font>
-			<br><font size="5" face="Arial,Helvetica"><!-- BEGIN RICH-MEDIA BURST! CODE --> 
+			<br><font size="5" face="Arial,Helvetica"><!-- BEGIN RICH-MEDIA BURST! CODE -->
 <script language="JavaScript">
-<!--
-ShowBurstAd('ad1277f','468','60','468x60A','1', '', '');
-// --></script>
-<noscript><a href="http://www.burstnet.com/ads/ad1277f-map.cgi/ns/v=1.0J/sz=468x60A/" target="_top"><img src="http://www.burstnet.com/cgi-bin/ads/ad1277f.cgi/ns/v=1.0J/sz=468x60A/" border="0" alt="Click Here"></a> 
+rnum=Math.round(Math.random() * 100000);
+document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ad1277f.cgi/v=2.0S/sz=468x60A/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ad1277f.cgi/v=2.0S/sz=468x60A/28577/RETURN-CODE/JS/"></script>
+<noscript><a href="http://www.burstnet.com/ads/ad1277f-map.cgi/ns/v=2.0S/sz=468x60A/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ad1277f.cgi/ns/v=2.0S/sz=468x60A/" border="0" alt="Click Here"></a>
 </noscript>
 <!-- END BURST CODE -->
 </font></p>
@@ -181,22 +184,21 @@ you can contact
 </div>
 
 <p>
-	
-<!-- BEGIN RICH-MEDIA BURST! CODE --> 
+<!-- BEGIN RICH-MEDIA BURST! CODE -->
 <script language="JavaScript">
-<!--
-ShowBurstAd('ba1277f','468','60','468x60B','0', 'FFFFFF', '');
-// --></script>
-<noscript><a href="http://www.burstnet.com/ads/ba1277f-map.cgi/ns/v=1.0J/sz=468x60B/" target="_top"><img src="http://www.burstnet.com/cgi-bin/ads/ba1277f.cgi/ns/v=1.0J/sz=468x60B/" border="0" alt="Click Here"></a> 
+rnum=Math.round(Math.random() * 100000);
+document.write('<scr'+'ipt src="http://www.burstnet.com/cgi-bin/ads/ba1277f.cgi/v=2.0S/sz=468x60B/'+rnum+'/RETURN-CODE/JS/"></scr'+'ipt>');
+</script><script src="http://www.burstnet.com/cgi-bin/ads/ba1277f.cgi/v=2.0S/sz=468x60B/33064/RETURN-CODE/JS/"></script>
+<noscript><a href="http://www.burstnet.com/ads/ba1277f-map.cgi/ns/v=2.0S/sz=468x60B/" target="_top">
+<img src="http://www.burstnet.com/cgi-bin/ads/ba1277f.cgi/ns/v=2.0S/sz=468x60B/" border="0" alt="Click Here"></a>
 </noscript>
 <!-- END BURST CODE -->
-<a href="http://ezb.be/ac.php?n=a2a6b94e" target="_blank"><img src="http://ezb.be/av.php?what=zone:2&amp;target=_blank&amp;n=a2a6b94e&amp;6293" border="0" alt="Love Test" width="1" height="1"></a>
 
 </p>
 <hr size="1" noshade="">
 <a href="http://www.easyscopes.com/partner/1001.html"><img src="http://partner.easyscopes.com/site/1001.gif" alt="EasyScopes Preferred" width="110" height="39" border="0" hspace="5" vspace="0" align="RIGHT"></a>
 <div align="LEFT"><font size="1" face="Zurich BT,sans-serif"><a href="/copyright.html">Copyright</a> by <a href="mailto:webmaster@0800-horoscope.com">Euregio.Net AG</a>, © 1998-2004. <a href="/privacy.html">Privacy Policy</a>
-<br>Location: http://0800-horoscope.com/privacy.html<br>Last Modified: 02/06/2004</font></div>
+<br>Location: http://www.0800-horoscope.com/privacy.html<br>Last Modified: 04/12/2004</font></div>
 
 
 </td>
