--- a/b/bu/bus/businessol.com.html
+++ b/b/bu/bus/businessol.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the businessol.com privacy policy that was archived on 2004-04-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040401131342id_/http%3A//www.businessol.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the businessol.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204212048id_/http%3A//www.businessol.com/privacy) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/default.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -77,9 +77,7 @@ function MM_findObj(n, d) { //v4.0
                 <td width="9" align="right"><img src="/images/nav_divider.gif" width="9" height="20"></td>
                 <td width="76" align="right"><a href="/pricing/"><img src="/images/pricing.gif" height="20" border="0" width="43"></a></td>
                 <td width="9" align="right"><img src="/images/nav_divider.gif" width="9" height="20"></td>
-                <td width="67" align="right"><a href="/contact_us/"><img src="/images/contact_us.gif" width="67" height="20" border="0"></a></td>
-<td width="9" align="right"><img src="/images/nav_divider.gif" width="9" height="20"></td>
-                <td width="128" align="right"><a href="/development_principles/"><img src="/images/development_principles.gif" width="128" height="20" border="0"></a></td>
+                <td width="71" align="right"><a href="/contact_us/"><img src="/images/contact_us.gif" width="71" height="20" border="0"></a></td>
               </tr>
             </tbody></table></td>
         </tr>
@@ -308,23 +306,20 @@ appVersion.toString().charAt(0)!='3')document.write("<\!"+"--");</script><noscri
         <tbody><tr> 
           <td colspan="2" bgcolor="D0DADF" height="2"><img src="/images/1x1_D0DADF.gif" width="1" height="1"></td>
         </tr>
-         <tr valign="top"> 
-          <td width="483"><a href="/"><font size="1">Home</font></a> <font size="1">&nbsp;&nbsp;<a href="/about_us/">About 
-            Us</a> &nbsp;&nbsp;<a href="/case_studies/">Case Studies</a> &nbsp;&nbsp;<a href="/pricing/">Pricing</a> 
-            &nbsp;&nbsp;<a href="/contact_us/">Contact Us</a> &nbsp;&nbsp;<a href="/clients/">Clients</a> &nbsp;&nbsp;
-            <a href="/moreInfo/">More Info</a>&nbsp;&nbsp;
-            <a href="/partners/">Partners</a>&nbsp;&nbsp;<a href="/hosting_infrastructure/">Hosting Infrastructure</a></font></td>
-          <td width="271" align="right"> &nbsp;<font color="#999999">&nbsp;&nbsp;© 
-            2004 BusinessOL, Inc. | <a href="/privacy/">Privacy</a></font></td>
+        <tr valign="top"> 
+          <td width="473"><a href="/"><font size="1">Home</font></a> <font size="1">&nbsp;&nbsp;<a href="/about_us/">&nbsp;About 
+            Us</a> &nbsp;&nbsp;<a href="/case_studies/">Case Studies</a> &nbsp;&nbsp;&nbsp;<a href="/pricing/">Pricing</a> 
+            &nbsp;&nbsp;&nbsp;&nbsp;<a href="/contact_us/">Contact Us</a> &nbsp;&nbsp;&nbsp;&nbsp;<a href="/clients/">Clients</a> 
+            </font></td>
+          <td width="281" align="right"> &nbsp;<font color="#999999">&nbsp;&nbsp;© 
+            2004
+            BusinessOL, Inc. | <a href="/privacy/">Privacy</a></font></td>
         </tr>
       </tbody></table></td>
   </tr>
 </tbody></table>
 
-<!-- PPhlogger.com Code START -->
-<script language="JavaScript" type="text/javascript" src="http://www.pphlogger.com/pphlogger/pphlogger.js.php?id=bol"></script>
-<noscript><img alt=""src="http://www.pphlogger.com/pphlogger/pphlogger.php?id=bol&st=img"></noscript>
-<!-- PPhlogger.com Code END -->
+ 
 
 <!-- #EndTemplate -->
 </body></html>
