--- a/p/pe/ped/pedsters-planet.co.uk.html
+++ b/p/pe/ped/pedsters-planet.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pedsters-planet.co.uk privacy policy that was archived on 2004-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040614113537id_/http%3A//www.pedsters-planet.co.uk/help/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pedsters-planet.co.uk privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204215018id_/http%3A//www.pedsters-planet.co.uk/help/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Pedsters Planet : Privacy Policy</title>
@@ -30,7 +30,7 @@
   </tr>
   <tr> 
     <td colspan="2">
-<p>We can be reached via e-mail at <a href="mailto:webmaster@pedsters-planet.co.uk">webmaster@pedsters-planet.co.uk</a> 
+<p>We can be reached via e-mail at webmaster @ pedsters-planet.co.uk
       </p>
 <p>For each visitor to our Web page, our Web server automatically recognises only the consumer's domain name, but not the e-mail address (where possible).</p>
 <p>We collect only the domain name, but not the e-mail address of visitors to our Web page, the domain name and e-mail address (where possible) of visitors to our Web page, the e-mail addresses of those who post messages to our bulletin board, the e-mail addresses of those who communicate with us via e-mail, the e-mail addresses of those who make postings to our chat areas, aggregate information on what pages consumers access or visit, user-specific information on what pages consumers access or visit, information volunteered by the consumer, such as survey information and/or site registrations.</p>
@@ -59,7 +59,7 @@ Consumers can access this information by e-mail us at the above address.<p></p>
     <td colspan="2"><div align="center"> 
         <hr width="350">
         <font size="2" face="Arial, Helvetica, sans-serif"> ©2002-04 Pedsters 
-        Planet &amp; Pedster</font></div></td>
+        Planet &amp; Peter Laws</font></div></td>
   </tr>
 </tbody></table>
 
