--- a/f/fl/fly/flyglobespan.com.html
+++ b/f/fl/fly/flyglobespan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flyglobespan.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606022511id_/http%3A//www.flyglobespan.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flyglobespan.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204215855id_/http%3A//www.flyglobespan.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -8,11 +8,11 @@
 
 <link rel="stylesheet" href="http://www.flyglobespan.com/setup.css" type="text/css">
 
-<title>FlyGlobespan.com - Low cost Cheap flights and holidays to Palma, Malaga, Alicante, Barcelona, Tenerife, Rome, Nice, Prague, Faro, Venice, Toronto, Calgary, Vancouver, Canada from Edinburgh and Glasgow, Discount Holidays by Air from Scotland</title>
+<title>FlyGlobespan.com - Low cost Cheap flights and holidays to Palma, Malaga, Alicante, Barcelona, Tenerife, Rome, Nice, Prague, Faro, Venice, Toronto, Geneva, Calgary, Vancouver, Canada from Edinburgh and Glasgow, Discount Holidays by Air from Scotland, Skiing holidays from Edinburgh and Glasgow </title>
 
-<meta name="DESCRIPTION" content="FlyGlobespan.com - Low cost Cheap flights and holidays to Palma, Malaga, Alicante, Barcelona, Tenerife, Rome, Nice, Prague, Faro, Venice, Toronto, Calgary, Vancouver, Canada from Edinburgh and Glasgow, Discount Holidays by Air from Scotland">
+<meta name="DESCRIPTION" content="FlyGlobespan.com - Low cost Cheap flights and holidays to Palma, Malaga, Alicante, Barcelona, Tenerife, Rome, Nice, Prague, Faro, Venice, Geneva,  Toronto, Calgary, Vancouver, Canada from Edinburgh and Glasgow, Discount Holidays by Air from Scotland, Skiing holidays from Edinburgh and Glasgow">
 
-<meta name="KEYWORDS" content="flights &amp; accommodation, flight only, cheap flights, cheap flights online, cheap accommodation, cheap hotels, cheap apartments, villas, cheap flights website, low cost flights, cheap flights, no frills service, no frills airline, cheapest airline, flights from glasgow, flights from edinburgh, cheapest flights, glasgow, edinburgh, bargain flights, flights from scottish airports, flights to tenerife, flights to canary island, flights to canaries, flights to palma, flights to majorca, flights to mallorca, flights to the balearics, flights to the balearic islands, flights to spain, flights to barcelona, flights to malaga, flights to alicante, flights to nice, flights to france, flights to rome, flights to italy, palma, rome, italy, nice, france, spain, barcelona, alicante, malaga, tenerife, balearics, canaries, canary islands, balearic islands, flights online, , flight only website, flight website, hotels in nice, hotels in france, hotels in rome, hotels in italy, hotels in palma hotels in peurto pollensa, apartments in majorca, apartments mallorca, apartments in peurto pollensa, hotels in majorca, hotels in mallorca, villas in majorca, villas in mallorca, villas in the balearics, villas in the balearic islands, venice, flights to venice, hotels in venice, venice hotels">
+<meta name="KEYWORDS" content="flights &amp; accommodation, flight only, cheap flights, cheap flights online, cheap accommodation, Cheap ski holidays, Cheap skiing holidays from Scotland, Cheap chalets in the alps, cheap hotels, cheap apartments, villas, cheap flights website, low cost flights, cheap flights, no frills service, no frills airline, cheapest airline, flights from glasgow, flights from edinburgh, cheapest flights, glasgow, edinburgh, bargain flights, flights from scottish airports, flights to tenerife, flights to canary island, flights to canaries, flights to Geneva, Cheap flights to Geneva, snow flights, flights to Switzerland, flights to palma, flights to majorca, flights to mallorca, flights to the balearics, flights to the balearic islands, flights to spain, flights to barcelona, flights to malaga, flights to alicante, flights to nice, flights to france, flights to rome, flights to italy, palma, rome, italy, nice, france, spain, barcelona, alicante, malaga, tenerife, balearics, canaries, canary islands, balearic islands, flights online, , flight only website, flight website, hotels in nice, hotels in france, hotels in rome, hotels in italy, hotels in palma hotels in peurto pollensa, apartments in majorca, apartments mallorca, apartments in peurto pollensa, hotels in majorca, hotels in mallorca, villas in majorca, villas in mallorca, villas in the balearics, villas in the balearic islands, venice, flights to venice, hotels in venice, venice hotels, Geneva hotels, Switzerland hotels, Ski hotels, ski Chalets">
 
 
 
@@ -22,9 +22,7 @@
 <body bgcolor="#ffffff" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
 <table width="780" cellspacing="0" cellpadding="0" border="0" height="100">
-<tbody><tr><td width="780" height="80">
-<img src="http://www.flyglobespan.com/images/header5.gif" width="780" height="100"><br>
-</td></tr></tbody></table>
+<tbody><tr><td width="359" height="100"><img src="http://www.flyglobespan.com/images/headerpart1.gif" width="359" height="100"></td><td width="421" height="100"><img src="http://www.flyglobespan.com/images/headerpart2.gif" width="421" height="100"></td></tr></tbody></table>
 
 
 
@@ -35,29 +33,34 @@
 
 <td width="5">&nbsp;</td>
 
-<td width="250" valign="top"><br>
+<td width="250" valign="top" class="bodytextblue"><br>
 
-<!-- Information Menu Links -->
+<!-- Information - Europe Menu Links -->
 
 <table width="250" cellspacing="0" cellpadding="0" border="0">
-<tbody><tr><td width="250" height="31" background="http://www.flyglobespan.com/images/box/200_1.gif" class="titletextwhite">&nbsp;&nbsp;Other Globespan Websites</td></tr>
-<tr><td width="250" height="20" background="http://www.flyglobespan.com/images/box/200_2.gif" class="bodytextwhite">
-<img src="http://www.globespan.com/images/1x1.gif WIDTH=" 245"="" height="6"><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.globespan.com" style="font-size: 8pt; font-family: arial;"><b>Canada Flights &amp; City Breaks</b></a><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.globespan.com/worldwide/index.asp" style="font-size: 8pt; font-family: arial;"><b>Worldwide Scheduled Flights</b></a><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.globespan.com/ptopollensa/index.asp" style="font-size: 8pt; font-family: arial;"><b>Majorca - Puerto Pollensa Packages</b></a></td></tr>
-<tr><td width="250" height="19" background="http://www.flyglobespan.com/images/box/200_3.gif" class="bodytextblue" align="right">&nbsp;</td></tr>
+<tbody><tr><td width="250">&nbsp;<a href="http://www.flyglobespan.com/index.asp?lan=en"><img src="http://www.flyglobespan.com/images/flags/uk.gif" width="18" height="12" border="0" alt="English"></a>&nbsp;
+<a href="http://www.flyglobespan.com/es/index.asp"><img src="http://www.flyglobespan.com/images/flags/es.gif" width="18" height="12" border="0" alt="Español"></a>&nbsp;
+<a href="http://www.flyglobespan.com/fr/index.asp"><img src="http://www.flyglobespan.com/images/flags/fr.gif" width="18" height="12" border="0" alt="Français"></a>&nbsp;
+</td></tr>
+</tbody></table><img src="images/1x1.gif" width="250" height="2"><br>
+
+<table width="250" cellspacing="0" cellpadding="0" border="0">
+<tbody><tr><td width="250">
+<a href="http://www.globespan.com"><img src="http://www.flyglobespan.com/imagesnew/globespanbutton.gif" width="250" height="40" border="0"></a>
+<img src="images/1x1.gif" width="250" height="1"><br>
+</td></tr>
 </tbody></table>
 
 <table width="250" cellspacing="0" cellpadding="0" border="0">
-<tbody><tr><td width="250" height="31" background="http://www.flyglobespan.com/images/box/200_1.gif" class="titletextwhite">&nbsp;&nbsp;Bookable Extras</td></tr>
+<tbody><tr><td width="250" height="31" background="http://www.flyglobespan.com/images/box/200_1.gif" class="titletextwhite">&nbsp;&nbsp;Bookable Extras - Europe</td></tr>
 <tr><td width="250" height="20" background="http://www.flyglobespan.com/images/box/200_2.gif" class="bodytextwhite">
 <img src="http://www.flyglobespan.com/images/1x1.gif WIDTH=" 245"="" height="6"><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/hotels.asp" style="font-size: 8pt; font-family: arial;"><b>Hotels &amp; Apartments</b> <small><small>(Accommodation Only)</small></small></a><br>
+&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="window.open('http://www.hostelworld.com/index.php?affiliate=flyglobespan.com','Hostels','width=850,height=550,scrollbars');" style="font-size: 8pt; font-family: arial;"><b>European Youth Hostels &amp; Hostels</b></a><br>
 <hr size="1" width="94%">
-
-&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="window.open('http://www.flyglobespan.com/carhire.asp','Carhire','width=900,height=550,scrollbars');" style="font-size: 8pt; font-family: arial;"><b>Car Hire</b></a><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/airporttransfers/index.asp" style="font-size: 8pt; font-family: arial;"><b>Coach Transfers to Resorts</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/airporttransfers/index.asp" style="font-size: 8pt; font-family: arial;"><b>Transfers</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/airporttransfers/index.asp" style="font-size: 8pt; font-family: arial;"><b>To and from resorts and cities<hr size="1" width="94%">
+&nbsp;&nbsp;&nbsp;</b></a><b><a href="javascript:void(0);" onclick="window.open('http://www.flyglobespan.com/carhire.asp','Carhire','width=900,height=550,scrollbars');" style="font-size: 8pt; font-family: arial;"><b>Car Hire</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/faq.asp" style="font-size: 8pt; font-family: arial;"><b>Travel Insurance</b></a>
 <hr size="1" width="94%">
 
@@ -69,37 +72,39 @@
 
 &nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="window.open('https://www.mytravelmoney.com/gpweb.asp?AgentId=1237','Money','width=750,height=600,scrollbars,status,');" style="font-size: 8pt; font-family: arial;"><b>Holiday Money</b></a><br>
 
-&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="window.open('http://www.holidayextras.co.uk/CoastDirect/ABCDirect.ASP?p=r&amp;profile=flyglobespan&amp;agent=wz252','Rail','width=750,height=600,scrollbars,status,');" style="font-size: 8pt; font-family: arial;"><b>Rail Transfers to UK Airports</b></a><br></td></tr>
+&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="window.open('http://www.holidayextras.co.uk/CoastDirect/ABCDirect.ASP?p=r&amp;profile=flyglobespan&amp;agent=wz252','Rail','width=750,height=600,scrollbars,status,');" style="font-size: 8pt; font-family: arial;"><b>Rail Transfers to UK Airports</b></a><br></b></td></tr>
 <tr><td width="250" height="19" background="http://www.flyglobespan.com/images/box/200_3.gif" class="bodytextblue" align="right">&nbsp;</td></tr>
 </tbody></table>
 
 
 <table width="250" cellspacing="0" cellpadding="0" border="0">
-<tbody><tr><td width="250" height="31" background="http://www.flyglobespan.com/images/box/200_1.gif" class="titletextwhite">&nbsp;&nbsp;Information</td></tr>
+<tbody><tr><td width="250" height="31" background="http://www.flyglobespan.com/images/box/200_1.gif" class="titletextwhite">&nbsp;&nbsp;Information - Europe</td></tr>
 <tr><td width="250" height="20" background="http://www.flyglobespan.com/images/box/200_2.gif" class="bodytextwhite">
 <img src="http://www.flyglobespan.com/images/1x1.gif WIDTH=" 245"="" height="6"><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/index.asp" style="font-size: 8pt; font-family: arial;"><b>Home</b></a><br>
 <hr size="1" width="94%">
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/faqs.asp" style="font-size: 8pt; font-family: arial;"><b>Frequently Asked Questions</b></a><br><hr size="1" width="94%">
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#baggage" style="font-size: 8pt; font-family: arial;"><b>Baggage Allowance</b></a><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#sporting" style="font-size: 8pt; font-family: arial;"><b>Golf Clubs &amp; Sporting Equipment</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#sporting" style="font-size: 8pt; font-family: arial;"><b>Golf Clubs, Skis &amp; Sporting Equipment</b></a><br>
 <hr size="1" width="94%">
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#wheelchairs" style="font-size: 8pt; font-family: arial;"><b>Wheelchairs/Special Requirements</b></a><br>
 <hr size="1" width="94%">
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/viewbooking.asp" style="font-size: 8pt; font-family: arial;"><b>Flight Re-confirmation</b></a><br>
 <hr size="1" width="94%">
-&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/airportinfo.asp" style="font-size: 8pt; font-family: arial;"><b>Airport Information</b></a><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/brochure.asp" style="font-size: 8pt; font-family: arial;"><b>Brochure Request</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/airportinfo.asp" style="font-size: 8pt; font-family: arial;"><b>Airport Information - Europe</b></a><br>
+<!-- &nbsp;&nbsp;&nbsp;<A HREF="http://www.flyglobespan.com/brochure.asp" STYLE="font-size: 8pt; font-family: arial;"><B>Brochure Request</B></A><BR> -->
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#cancellations" style="font-size: 8pt; font-family: arial;"><b>Cancellations &amp; Refunds</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#changes" style="font-size: 8pt; font-family: arial;"><b>Changes to Bookings</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#checkin" style="font-size: 8pt; font-family: arial;"><b>Check-In Times</b></a><br>
-&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/financial.asp" style="font-size: 8pt; font-family: arial;"><b>Financial Security</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/cc.asp" style="font-size: 8pt; font-family: arial;"><b>Credit Card Charges</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/routes.asp" style="font-size: 8pt; font-family: arial;"><b>Flight Timetable</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#food" style="font-size: 8pt; font-family: arial;"><b>In-Flight Service</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/vacancies.asp" style="font-size: 8pt; font-family: arial;"><b>Job Vacancies</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/privacy.asp" style="font-size: 8pt; font-family: arial;"><b>Privacy Policy</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp#seating" style="font-size: 8pt; font-family: arial;"><b>Seat Allocation</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.gsp1.com" style="font-size: 8pt; font-family: arial;"><b>Travel Agents Login</b></a><br>
 &nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/tandc.asp" style="font-size: 8pt; font-family: arial;"><b>Terms &amp; Conditions</b></a><br>
+&nbsp;&nbsp;&nbsp;<a href="http://www.flyglobespan.com/viewbooking.asp" style="font-size: 8pt; font-family: arial;"><b>View Your Booking</b></a><br>
 </td></tr>
 <tr><td width="250" height="19" background="http://www.flyglobespan.com/images/box/200_3.gif" class="bodytextblue" align="right">&nbsp;</td></tr>
 </tbody></table>
@@ -121,7 +126,7 @@ Be the first to hear about our latest developments and special offers. Enter you
 <table width="230" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr><td width="190" valign="left">
 &nbsp;<input type="text" size="28" maxlength="255" name="Email" style="background:#dddddd; color:#red; font-size: 8pt; font-family: verdana; border: solid 1px red;">
-<input type="hidden" name="ValidateKey" value="9231379">
+<input type="hidden" name="ValidateKey" value="785944">
 <input type="hidden" name="Subscribe" value="NO"></td>
 <td width="40" valign="middle"><input type="image" src="http://www.flyglobespan.com/images/box/addbutton.gif" width="37" height="21" border="0"></td></tr></tbody></table>
 </center></td></tr>
