--- a/n/na/nab/nabshow.com.html
+++ b/n/na/nab/nabshow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nabshow.com privacy policy that was archived on 2004-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040608145346id_/http%3A//www.nabshow.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nabshow.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204225333id_/http%3A//www.nabshow.com/NAB2004/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>NAB2004- The World's Largest Electronic Media Show - April 17-22, 2004 - Las Vegas, Nevada</title>
@@ -22,11 +22,11 @@ function popUp2(url) {
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
-<body bgcolor="#FFFFFF" marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" background="images/bg.gif">
+<body bgcolor="#FFFFFF" marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" background="../images/bg.gif">
 
 <table width="655" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr> 
-    <td colspan="3"> <a href="../"><img src="images/header.gif" width="655" height="150" border="0"></a></td>
+    <td colspan="3"> <a href="file:///H|"><img src="/images/header.gif" width="655" height="150" border="0"></a></td>
   </tr>
   <tr valign="top"> 
     <td>
@@ -39,37 +39,37 @@ self.name = "mainWin"; }
 <div align="left"> 
   <p><img src="/conventions/radioshow/2003/images/spacer.gif" width="140" height="1"><br>
   </p>
-  <p><a href="../Default.asp"><img src="../images/homepage.gif" border="0" alt="NAB2004 Home Page" width="120" height="24"></a><br>
-    <a href="../keynotes.asp"><img src="../images/keynotes.gif" border="0" alt="Keynotes and Special Events" width="120" height="24"></a><br>
-    <a href="../conferences.asp"><img src="../images/conferences.gif" border="0" alt="Conferences" width="120" height="24"></a><br>
-    <a href="../supersessions.asp"><img src="../images/supersessions.gif" border="0" alt="Super Sessions" width="120" height="24"></a><br>
-    <a href="../conferencelistsearch.asp"><img src="../images/speakerdirectory.gif" border="0" alt="Speaker Directory" width="120" height="24"></a><br>
-    <a href="../exhibits.asp"><img src="../images/exhibits.gif" border="0" alt="Exhibits" width="120" height="24"></a><br>
-    <a href="../pavilions.asp"><img src="../images/exhibitpavilions.gif" border="0" alt="Exhibit Pavilions" width="120" height="24"></a><br>
-    <a href="../exhibitors/exhibitors.asp"><img src="../images/exhibitordirectory.gif" border="0" alt="Exhibitor Directory" width="120" height="24"></a><br>
-    <a href="../floorplans.asp"><img src="../images/exhibitfloormap.gif" border="0" alt="Exhibit Floor Map" width="120" height="24"></a><br>
-    <a href="../awards.asp"><img src="../images/awardsprograms.gif" border="0" alt="Awards Programs" width="120" height="24"></a><br>
-    <a href="http://www.aroundtownguide.com/?AF=1103&amp;source=nab" target="_blank"><img src="../images/lasvegasguide.gif" border="0" alt="Around Town Guide To Las Vegas" width="120" height="24"></a><br>
-    <a href="../attendeeservices.asp"><img src="../images/attendeeservices.gif" border="0" alt="Attendee Services" width="120" height="24"></a><br>
-    <a href="../exhibitors/services.asp"><img src="../images/exhibitorservices.gif" border="0" alt="Exhibitor Services" width="120" height="24"></a><br>
-    <a href="../international.asp"><img src="../images/internationalservices.gif" border="0" alt="International Services" width="120" height="24"></a><br>
-   	<a href="../exhibitors/default.asp"><img src="../images/infoonexhibiting.gif" border="0" alt="Information On Exhibiting" width="120" height="24"></a><br>
-    <a href="../exhibitors/advertising.asp"><img src="../images/infoonadvertising.gif" border="0" alt="Information On Advertising" width="120" height="24"></a><br>
-    <a href="../press/default.asp"><img src="../images/pressroom.gif" border="0" alt="Press Room" width="120" height="24"></a><br>
-    <a href="http://www.imaspub.com/nabdaily/" target="_blank"><img src="../images/dailynews.gif" border="0" alt="Daily News" width="120" height="24"></a><br>
-    <a href="http://www.tvworldwide.com/events/nab/nab2004/" target="_blank"><img src="../images/webcasts.gif" border="0" alt="NAB Webcasts" width="120" height="24"></a><br>
-    <a href="../audiorecordings.asp"><img src="../images/sessionrecordings.gif" border="0" alt="NAB Conference Session Audio Recordings" width="120" height="24"></a><br>
-    <a href="http://www.nab.org/NewsletterSettings.asp" target="_blank"><img src="../images/emailnewsletters.gif" border="0" alt="NAB E-mail Newsletters" width="120" height="24"></a><br>
-    <a href="../sponsors.asp"><img src="../images/sponsors.gif" border="0" alt="Official Sponsors" width="120" height="24"></a><br>
-    <a href="../contact.asp"><img src="../images/contactus.gif" border="0" alt="Contact Us" width="120" height="24"></a> 
+  <p><a href="/nab2004/Default.asp"><img src="/images/homepage.gif" border="0" alt="NAB2004 Home Page" width="120" height="24"></a><br>
+    <a href="/nab2004/keynotes.asp"><img src="/images/keynotes.gif" border="0" alt="Keynotes and Special Events" width="120" height="24"></a><br>
+    <a href="/nab2004/conferences.asp"><img src="/images/conferences.gif" border="0" alt="Conferences" width="120" height="24"></a><br>
+    <a href="/nab2004/supersessions.asp"><img src="/images/supersessions.gif" border="0" alt="Super Sessions" width="120" height="24"></a><br>
+    <a href="/nab2004/conferencelistsearch.asp"><img src="/images/speakerdirectory.gif" border="0" alt="Speaker Directory" width="120" height="24"></a><br>
+    <a href="/exhibits.asp"><img src="/images/exhibits.gif" border="0" alt="Exhibits" width="120" height="24"></a><br>
+    <a href="/nab2004/pavilions.asp"><img src="/images/exhibitpavilions.gif" border="0" alt="Exhibit Pavilions" width="120" height="24"></a><br>
+    <a href="/nab2004/exhibitors/exhibitors.asp"><img src="/images/exhibitordirectory.gif" border="0" alt="Exhibitor Directory" width="120" height="24"></a><br>
+    <a href="/nab2004/floorplans.asp"><img src="/images/exhibitfloormap.gif" border="0" alt="Exhibit Floor Map" width="120" height="24"></a><br>
+    <a href="/nab2004/awards.asp"><img src="/images/awardsprograms.gif" border="0" alt="Awards Programs" width="120" height="24"></a><br>
+    <a href="http://www.aroundtownguide.com/?AF=1103&amp;source=nab" target="_blank"><img src="/images/lasvegasguide.gif" border="0" alt="Around Town Guide To Las Vegas" width="120" height="24"></a><br>
+    <a href="/nab2004/attendeeservices.asp"><img src="/images/attendeeservices.gif" border="0" alt="Attendee Services" width="120" height="24"></a><br>
+    <a href="/nab2004/exhibitors/services.asp"><img src="/images/exhibitorservices.gif" border="0" alt="Exhibitor Services" width="120" height="24"></a><br>
+    <a href="/nab2004/international.asp"><img src="/images/internationalservices.gif" border="0" alt="International Services" width="120" height="24"></a><br>
+   	<a href="/nab2004/exhibitors/default.asp"><img src="/images/infoonexhibiting.gif" border="0" alt="Information On Exhibiting" width="120" height="24"></a><br>
+    <a href="/nab2004/exhibitors/advertising.asp"><img src="/images/infoonadvertising.gif" border="0" alt="Information On Advertising" width="120" height="24"></a><br>
+    <a href="/nab2004/press/default.asp"><img src="/images/pressroom.gif" border="0" alt="Press Room" width="120" height="24"></a><br>
+    <a href="http://www.imaspub.com/nabdaily/" target="_blank"><img src="/images/dailynews.gif" border="0" alt="Daily News" width="120" height="24"></a><br>
+    <a href="http://www.tvworldwide.com/events/nab/nab2004/" target="_blank"><img src="/images/webcasts.gif" border="0" alt="NAB Webcasts" width="120" height="24"></a><br>
+    <a href="/nab2004/audiorecordings.asp"><img src="/images/sessionrecordings.gif" border="0" alt="NAB Conference Session Audio Recordings" width="120" height="24"></a><br>
+    <a href="http://www.nab.org/NewsletterSettings.asp" target="_blank"><img src="/images/emailnewsletters.gif" border="0" alt="NAB E-mail Newsletters" width="120" height="24"></a><br>
+    <a href="/nab2004/sponsors.asp"><img src="/images/sponsors.gif" border="0" alt="Official Sponsors" width="120" height="24"></a><br>
+    <a href="/nab2004/contact.asp"><img src="/images/contactus.gif" border="0" alt="Contact Us" width="120" height="24"></a> 
   </p>
-  <p><a href="http://www.nab.org"><img src="../images/nablogo.gif" border="0" width="120" height="73"></a><br>
-    <a href="http://www.nab.org/default.asp"><img src="../images/nabhomepage.gif" border="0" alt="NAB Home Page" width="120" height="24"></a><br>
-    <a href="http://www.nab.org/conventions/"><img src="../images/nabconventions.gif" border="0" alt="NAB Conventions" width="120" height="24"></a><br>
-    <a href="http://www.nab.org/nabstore/"><img src="../images/nabstore.gif" border="0" alt="NAB Store" width="120" height="24"></a><br>
-    <a href="http://www.nab.org/bcc/"><img src="../images/nabcareercenter.gif" border="0" alt="NAB Career Center" width="120" height="24"></a><br>
-    <a href="http://www.nab.org/about/"><img src="../images/aboutnab.gif" border="0" alt="About NAB"></a><br> 
-    <a href="http://www.nab.org/membership/"><img src="../images/joinnabnow.gif" border="0" alt="Join NAB Now" width="120" height="24"></a><br>
+  <p><a href="http://www.nab.org"><img src="/images/nablogo.gif" border="0" width="120" height="73"></a><br>
+    <a href="http://www.nab.org/default.asp"><img src="/images/nabhomepage.gif" border="0" alt="NAB Home Page" width="120" height="24"></a><br>
+    <a href="http://www.nab.org/conventions/"><img src="/images/nabconventions.gif" border="0" alt="NAB Conventions" width="120" height="24"></a><br>
+    <a href="http://www.nab.org/nabstore/"><img src="/images/nabstore.gif" border="0" alt="NAB Store" width="120" height="24"></a><br>
+    <a href="http://www.nab.org/bcc/"><img src="/images/nabcareercenter.gif" border="0" alt="NAB Career Center" width="120" height="24"></a><br>
+    <a href="http://www.nab.org/about/"><img src="/images/aboutnab.gif" border="0" alt="About NAB"></a><br> 
+    <a href="http://www.nab.org/membership/"><img src="/images/joinnabnow.gif" border="0" alt="Join NAB Now" width="120" height="24"></a><br>
   </p>
 </div>
 </td>
@@ -159,7 +159,7 @@ self.name = "mainWin"; }
             <p align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="-1">© 
               <a href="http://www.nab.org">National Association Of Broadcasters</a>. 
               All Rights Reserved.<br>
-              <a href="/privacy.asp">Privacy Policy</a> | E-mail Newsletter <a href="/newslettersettings.asp" target="_blank">Opt-In/Opt-Out 
+              <a href="/NAB2004/privacy.asp">Privacy Policy</a> | E-mail Newsletter <a href="/newslettersettings.asp" target="_blank">Opt-In/Opt-Out 
               Form </a></font></p>
           </td>
         </tr>
