csrwire.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 3170,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.99,
  "homepage_snapshot_redirected_domain": "csrwire.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040930224636id_/http://www.csrwire.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040930224636id_/http%3A//csrwire.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "csrwire.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204231239id_/http%3A//www.csrwire.com/page.cgi/privacy.html",
  "policy_title": "CSRwire.com -- Corporate Social Responsibility Newswire -- Press Release Forms",
  "policy_url": "csrwire.com/page.cgi/privacy.html",
  "sha1": "0408c80392cf1e4fa1667f678ae9486209687ccc",
  "simhash": 16377265489630750990,
  "simhash_updated": false,
  "site_hostname": "csrwire.com",
  "site_url": "http://csrwire.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204231239",
  "word_count": 500,
  "year": 2004
}

--- a/c/cs/csr/csrwire.com.html
+++ b/c/cs/csr/csrwire.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the csrwire.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607095918id_/http%3A//www.csrwire.com/page.cgi/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the csrwire.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204231239id_/http%3A//www.csrwire.com/page.cgi/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>  
 <title>CSRwire.com -- Corporate Social Responsibility Newswire -- Press Release Forms </title>  
@@ -195,7 +195,9 @@ return true;
         | <a href="./../releases.cgi">Press Releases</a> | <a href="./../csr/index.mpl?arg=a">Reports</a> 
         | <a href="./../page.cgi/events.html">CSR Events</a> 
         | <a href="./../page.cgi/education.html">Resources</a> 
-        | <a href="./../page.cgi/about.html">About Us</a> | <a href="./../page.cgi/partners.html">Partners</a> 
+        | 
+<a href="./../page.cgi/books.html">Books</a> |
+<a href="./../page.cgi/about.html">Contact  Us</a> | <a href="./../page.cgi/partners.html">Partners</a> 
       </p>  
       <p class="small">&nbsp; </p>
       <table width="100%" border="0" cellspacing="0" cellpadding="5">
